[다윗] - 장애물 패턴 설정 추가 - 지정된 패턴과 수만큼 장애물이 등장

--- a/PolyGoon/Assembly-CSharp.csproj
+++ b/PolyGoon/Assembly-CSharp.csproj
@@ -57,6 +57,8 @@
      <Compile Include="Assets\Script\GameScreen.cs" />
      <Compile Include="Assets\Script\MenuScreen.cs" />
      <Compile Include="Assets\Script\Obstacle.cs" />
+     <Compile Include="Assets\Script\ObstacleCreator.cs" />
+     <Compile Include="Assets\Script\ObstaclePattern.cs" />
      <Compile Include="Assets\Script\PlayerBody.cs" />
      <Compile Include="Assets\Script\PlayerInputManager.cs" />
      <Compile Include="Assets\Script\Screen.cs" />
