[다윗] - 아이템 구현 완료   > 스코어링 아이템 3개 (흰색, 검정색, 금색)  => 각각 200점 400점, 800점으로 변경   > 아이템 별 속도 수정   > 쉴드 아이템(50점) 추가   > 슈터 아이템(50점) 추가   > 아이템 클래스 <== 상속 == 스코어링 아이템, 액티브 아이템 / 액티브 아이템 <== 상속 == 슈터, 쉴드

--- a/PolyGoon/Assembly-CSharp.csproj
+++ b/PolyGoon/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Script\ActiveItem.cs" />
      <Compile Include="Assets\Script\BestScore.cs" />
      <Compile Include="Assets\Script\BlockRotate.cs" />
+     <Compile Include="Assets\Script\Bullet.cs" />
      <Compile Include="Assets\Script\ButtonManager.cs" />
      <Compile Include="Assets\Script\GameResultController.cs" />
      <Compile Include="Assets\Script\Item.cs" />
@@ -71,6 +72,8 @@
      <Compile Include="Assets\Script\RankSystem.cs" />
      <Compile Include="Assets\Script\Score.cs" />
      <Compile Include="Assets\Script\ScoringItem.cs" />
+     <Compile Include="Assets\Script\Shield.cs" />
+     <Compile Include="Assets\Script\Shooter.cs" />
      <Compile Include="Assets\Script\Timer.cs" />
  <Reference Include="UnityEditor.StandardEvents">
  <HintPath>C:/Users/David/Documents/공부자료/Unity/Polygoon/PolyGoon/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
